Fix whitespace-margin issue between nav and hero section

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ textarea {
   background-image: url(./images/illustration-header-mobile.svg);
   background-repeat: no-repeat;
   background-position: right bottom;
+  margin-top: -4%;
 }
 
 .supporting-text {
@@ -173,6 +174,7 @@ li {
     gap: 1rem;
     position: relative;
     padding-top: 120px;
+    margin-top: -14%;
   }
 
   .social-links {
